# raytracer

./: .gitignore  Cargo.toml  README.md
scenes/: simple_diffuse.json  simple_fuzzy_metal.json  simple_hollow_glass.json  simple_shiny_metal.json  triangle_materials.json  triangle_test.json  weekend-1-50-25.json  weekend-2-90-5.json  weekend-5-80-15.json  weekend-final.json
src/: acceleration.rs  camera.rs  color.rs  data.rs  grid.rs  hittable.rs  hittable_list.rs  intbox.rs  interval.rs  intpoint.rs  main.rs  material.rs  parser.rs  ray.rs  rtweekend.rs  scenes.rs  sphere.rs  test.rs  triangle.rs  utils.rs  value.rs  vec3.rs
src/acceleration/: aabb.rs  bvh.rs  grid.rs
src/camera/: naive.rs
src/gpu/: connect.wgsl  extend.wgsl  finalize.wgsl  generate.wgsl  shade.wgsl  state.rs  types.rs
src/hittable/: hittable_list.rs  sphere.rs  triangle.rs
src/utils/: parser.rs  rtweekend.rs  scenes.rs
src/value/: color.rs  data.rs  interval.rs  material.rs  ray.rs  vec3.rs
