[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive", "rc"] }
typetag = "0.2.18"
serde_json = "1.0.133"
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
ply-rs = "0.1.3"
thiserror = "2.0.4"
csv = "1.3.1"